--- a/css/styles.css
+++ b/css/styles.css
@@ -556,6 +556,58 @@ margin-right: 10px;
 .join-icon {
   fill: #fff;
 }
+/* -------------Подписаться------------- */
+.subscribe {
+  margin-left: 93px;
+}
+
+.subscrybe-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  display: block;
+  margin-bottom: 20px;
+  
+}
+
+.subscrybe-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: #2F303A;
+  padding-left: 16px;
+  margin-right: 12px;
+}
+
+.subscrybe-input::placeholder {
+  font-size: 16px;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-submit {
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88px;
+  text-align: left;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  padding-left: 29px;
+
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 /* -------------Портфолио--------------- */
 .main-project {
   padding-top: 94px;
@@ -736,3 +788,5 @@ margin-right: 10px;
   pointer-events: none;
   visibility: hidden;
 }
+
+/* ----------Форма пользователя------------- */
