--- a/css/styles.css
+++ b/css/styles.css
@@ -581,6 +581,7 @@ margin-right: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2F303A;
+  color: #fff;
   padding-left: 16px;
   margin-right: 12px;
 }
@@ -592,8 +593,11 @@ margin-right: 10px;
 }
 
 .subscribe-submit {
+  position: relative;
+  
   width: 200px;
   height: 50px;
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88px;
@@ -603,11 +607,19 @@ margin-right: 10px;
   padding-left: 29px;
 
   background: var(--accent-color);
+  border: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
 }
 
+.subscrybe-icon {
+  position: absolute;
+  fill: #fff;
+  margin-left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
 /* -------------Портфолио--------------- */
 .main-project {
   padding-top: 94px;
@@ -764,6 +776,7 @@ margin-right: 10px;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
+  padding: 40px;
 }
 
 .modal-close {
@@ -777,10 +790,15 @@ margin-right: 10px;
   top: 8px;
   right: 8px;
 }
+
 .modal-icon {
   position: absolute;
+  background-color: #fff;
+  border-radius: 50%;
   top: 50%;left: 50%;
   transform: translate(-50%,-50%);
+  fill: #000000;
+  stroke-opacity: 0.1;
 }
 
 .is-hidden {
@@ -789,4 +807,58 @@ margin-right: 10px;
   visibility: hidden;
 }
 
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-color);
+}
 /* ----------Форма пользователя------------- */
+.user-input {
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.form-feedback {
+margin-bottom: 20px;
+}
+.user-feedback {
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.user-agreement {
+font-size: 14px;
+line-height: 1.71px;
+letter-spacing: 0.03em;
+color: var (--secondary-color);
+}
+
+.submit {
+  width: 200px;
+  height: 50px;
+  background: #188CE8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  cursor: pointer;
+}
