--- a/css/styles.css
+++ b/css/styles.css
@@ -803,6 +803,12 @@ margin-right: 10px;
   transform: translate(-50%,-50%);
   fill: #000000;
   stroke-opacity: 0.1;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon:hover,
+.modal-icon:focus {
+  fill: #2196F3;
 }
 
 .is-hidden {
@@ -835,6 +841,9 @@ margin-right: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+  padding-left: 42px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-feedback {
@@ -849,17 +858,53 @@ margin-right: 10px;
   border-radius: 4px;
 }
 
+
 .user-agreement {
   font-size: 14px;
   line-height: 1.71px;
   letter-spacing: 0.03em;
-  color: var (--secondary-color);
+  color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+}
+
+.icon-checkbox {
+  fill: transparent;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.check-icon {
+  width: 16px;
+  height: 15px;
+  border: 3px solid var(--primary-color);
+  border-radius: 2px;
+  margin-right: 8px;
+  margin-left: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox {
+  transition: beckground-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:focus + .user-agreement span {
+  border: 3px solid #2196F3;
+}
+.checkbox:checked + .user-agreement span {
+  background-color: #2196F3;
+  border: none;
+}
+
+.checkbox:checked + .user-agreement .icon-checkbox {
+  fill: #fff;
 }
 
 .submit {
   width: 200px;
   height: 50px;
-  background: #188CE8;
+  background: #2196F3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 0;
@@ -877,6 +922,12 @@ margin-right: 10px;
   cursor: pointer;
 }
 
+.submit:hover,
+.submit:focus {
+  background: #188CE8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 .user-title {
   display: block;
   font-size: 12px;
@@ -884,31 +935,49 @@ margin-right: 10px;
   letter-spacing: 0.01em;
   color: var(--secondary-color);
   margin-bottom: 4px;
+}
 
-  
+.user-feedback {
+  padding: 12px 16px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-feedback:focus,
+.user-feedback:hover {
+  border: 1px solid #2196F3;
 }
 
 .user-feedback::placeholder {
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  
   color: rgba(117, 117, 117, 0.5);
-  padding-top: 12px;
-  padding-left: 16px;
+  
 }
 
 .form-icon {
   position: absolute;
   top: 50%;
-  left: 12px;
+  left: 15px;
   transform: translateY(-50%);
-}
-
-.form-checkbox {
-  margin-bottom: 30px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-agreemant {
    color: #2196F3;
+}
+
+.user-input:hover,
+.user-input:focus {
+  border: 1px solid #2196F3;
+}
+
+.user-input:hover +.form-icon,
+.user-input:focus + .form-icon {
+  fill: #2196F3;
+}
+
+.form-checkbox {
+  margin-bottom: 30px;
 }
