--- a/css/styles.css
+++ b/css/styles.css
@@ -856,6 +856,9 @@ margin-right: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
+  padding: 12px 16px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -938,9 +941,9 @@ margin-right: 10px;
 }
 
 .user-feedback {
-  padding: 12px 16px;
+  /* padding: 12px 16px;
   outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .user-feedback:focus,
