--- a/css/styles.css
+++ b/css/styles.css
@@ -795,6 +795,13 @@ margin-right: 10px;
   right: 8px;
 }
 
+.modal-close:focus .modal-icon {
+  fill: #2196F3;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
 .modal-icon {
   position: absolute;
   background-color: #fff;
@@ -803,12 +810,15 @@ margin-right: 10px;
   transform: translate(-50%,-50%);
   fill: #000000;
   stroke-opacity: 0.1;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-icon:hover,
-.modal-icon:focus {
+.modal-icon:hover {
   fill: #2196F3;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .is-hidden {
@@ -851,13 +861,14 @@ margin-right: 10px;
 }
 
 .user-feedback {
-  width: 448px;
+  min-width: 448px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
   padding: 12px 16px;
   outline: none;
+  resize: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -940,12 +951,6 @@ margin-right: 10px;
   margin-bottom: 4px;
 }
 
-.user-feedback {
-  /* padding: 12px 16px;
-  outline: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-}
-
 .user-feedback:focus,
 .user-feedback:hover {
   border: 1px solid #2196F3;
@@ -955,8 +960,7 @@ margin-right: 10px;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-  
+  color: rgba(117, 117, 117, 0.5); 
 }
 
 .form-icon {
@@ -969,6 +973,7 @@ margin-right: 10px;
 
 .link-agreemant {
    color: #2196F3;
+   padding: 4px;
 }
 
 .user-input:hover,
